Crash when selecting Grease Pencil objects with no Grease Pencil brushes active #56457

Closed
opened 2018-08-20 02:46:01 +02:00 by David · 9 comments

System Information
Win 10 Pro 64bit/GTX960M

Blender Version
Broken: (blender-2.80 20b30b6bee)

Short description of error

When I select a Grease Pencil object it automatically crashes and closes blender. I've tried with every render engine, but the problem remains.

**System Information** Win 10 Pro 64bit/GTX960M **Blender Version** Broken: (blender-2.80 20b30b6bee5) **Short description of error** When I select a Grease Pencil object it automatically crashes and closes blender. I've tried with every render engine, but the problem remains.
Author

Added subscriber: @daviddomingues

Added subscriber: @daviddomingues
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Cannot reproduce (Win10, GTX1080Ti, 76ea32d192)

Please provide a more detailed bug report as instructed, including a simple test file and the precise steps needed repeat this bug. Right now, it's unclear what other editors you may have open (and on what tabs), what objects are present in the scene, etc.

Cannot reproduce (Win10, GTX1080Ti, 76ea32d192693ac0d46270dd30c7e50a0bfcea62) Please provide a more detailed bug report as instructed, including a **simple test file** and the **precise steps needed repeat this bug**. Right now, it's unclear what other editors you may have open (and on what tabs), what objects are present in the scene, etc.
Author

I looked up at some forums and resetting to factory settings solved it. In case you want to find out what the problem was, I will send a Crash.zip.blend file and a screenshot annexed.

Steps:
Open blender
Clicking in Grease Pencil Object in the middle of the screen (see screenshot) blender crashes.

Deleting everything and adding a new grease pencil object
Switch to draw mode
Blender Crashes

(Btw emulate Numpad feature is not working)

I looked up at some forums and resetting to factory settings solved it. In case you want to find out what the problem was, I will send a [Crash.zip](https://archive.blender.org/developer/F4302175/Crash.zip).blend file and a screenshot annexed. Steps: Open blender Clicking in Grease Pencil Object in the middle of the screen (see screenshot) blender crashes. Deleting everything and adding a new grease pencil object Switch to draw mode Blender Crashes (Btw emulate Numpad feature is not working)
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Confirmed here on Windows 10 MSVS2017 Debug Build

image.png

Confirmed here on Windows 10 MSVS2017 Debug Build ![image.png](https://archive.blender.org/developer/F4302269/image.png)
Member

@CharlieJolly Thanks, looks like an easy fix.

@CharlieJolly Thanks, looks like an easy fix.
Joshua Leung changed title from Crash!! 2.8 Grease Pencil to Crash when selecting Grease Pencil objects with no Grease Pencil brushes active 2018-08-21 07:04:08 +02:00

This issue was referenced by 4f06c7c838

This issue was referenced by 4f06c7c8389d144394efdda8829f3d01283694d6
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56457
No description provided.