Fix T56457: Crash when selecting Grease Pencil objects

Thanks to Charlie Jolly (@charlie) for the backtrace